--- a/metasploit/Dockerfile
+++ b/metasploit/Dockerfile
@@ -1,10 +1,9 @@
-FROM parrot-core:latest
+FROM parrotsec/parrot-core:latest
 MAINTAINER Lorenzo "Palinuro" Faletra (palinuro@linux.it)
 ENV DEBIAN_FRONTEND noninteractive
+ENV VERSION 3.11-1
 
 # Install components
-RUN apt-get update; apt-get -y dist-upgrade;
-RUN apt-get -y --no-install-recommends install parrot-menu
-RUN apt-get -y install parrot-pico metasploit-framework postgresql
+RUN apt-get update; apt-get -y dist-upgrade;apt-get -y --no-install-recommends install parrot-menu;apt-get -y install parrot-pico metasploit-framework postgresql
 
 ENTRYPOINT msfconsole-start $@
